# solver-rs

./: Cargo.toml
src/: best_response.rs  constants.rs  game.rs  main.rs  regret.rs  terminal.rs  winners.rs
