[package]
name = "solver-rs"
version = "0.1.0"
authors = ["Charlie Koudsi <charlie@thecarfactory.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_poker = { git = "https://github.com/charliekoudsi/rs-poker" }
# serde = {version="1.0.119", features = ["derive"]}
# bincode = "1.3.1"
crossbeam-utils = "0.8.0"
rand = "0.8.3"
array-init = "1.0.0"
nalgebra = "0.26.2"

[profile.release]
debug = true
